--- a/style.css
+++ b/style.css
@@ -71,12 +71,14 @@ body {
     border-radius: 10px;
     font-size: 0.9rem;
     font-weight: 500;
+    letter-spacing: 0.1em;
+    transition: 0.5s;
 }
 
 .btn:hover {
     background-color: blue;
-    text-decoration: underline;
     cursor: pointer;
+    letter-spacing: 0.4em;
 }
 
 .continar {
